; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_force_renegotiation.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_force_renegotiation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }
%struct.ahd_devinfo = type { i32, i32, i32 }
%struct.ahd_initiator_tinfo = type { i32 }
%struct.ahd_tmode_tstate = type { i32 }

@AHD_NEG_IF_NON_ASYNC = common dso_local global i32 0, align 4
@AHD_SHOW_MESSAGES = common dso_local global i32 0, align 4
@ahd_debug = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ahd_softc*, %struct.ahd_devinfo*)* @ahd_force_renegotiation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ahd_force_renegotiation(%struct.ahd_softc* %0, %struct.ahd_devinfo* %1) #0 {
  %3 = alloca %struct.ahd_softc*, align 8
  %4 = alloca %struct.ahd_devinfo*, align 8
  %5 = alloca %struct.ahd_initiator_tinfo*, align 8
  %6 = alloca %struct.ahd_tmode_tstate*, align 8
  store %struct.ahd_softc* %0, %struct.ahd_softc** %3, align 8
  store %struct.ahd_devinfo* %1, %struct.ahd_devinfo** %4, align 8
  %7 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %8 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %4, align 8
  %9 = getelementptr inbounds %struct.ahd_devinfo, %struct.ahd_devinfo* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %4, align 8
  %12 = getelementptr inbounds %struct.ahd_devinfo, %struct.ahd_devinfo* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %4, align 8
  %15 = getelementptr inbounds %struct.ahd_devinfo, %struct.ahd_devinfo* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call %struct.ahd_initiator_tinfo* @ahd_fetch_transinfo(%struct.ahd_softc* %7, i32 %10, i32 %13, i32 %16, %struct.ahd_tmode_tstate** %6)
  store %struct.ahd_initiator_tinfo* %17, %struct.ahd_initiator_tinfo** %5, align 8
  %18 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %19 = load %struct.ahd_devinfo*, %struct.ahd_devinfo** %4, align 8
  %20 = load %struct.ahd_tmode_tstate*, %struct.ahd_tmode_tstate** %6, align 8
  %21 = load %struct.ahd_initiator_tinfo*, %struct.ahd_initiator_tinfo** %5, align 8
  %22 = load i32, i32* @AHD_NEG_IF_NON_ASYNC, align 4
  %23 = call i32 @ahd_update_neg_request(%struct.ahd_softc* %18, %struct.ahd_devinfo* %19, %struct.ahd_tmode_tstate* %20, %struct.ahd_initiator_tinfo* %21, i32 %22)
  ret void
}

declare dso_local %struct.ahd_initiator_tinfo* @ahd_fetch_transinfo(%struct.ahd_softc*, i32, i32, i32, %struct.ahd_tmode_tstate**) #1

declare dso_local i32 @ahd_update_neg_request(%struct.ahd_softc*, %struct.ahd_devinfo*, %struct.ahd_tmode_tstate*, %struct.ahd_initiator_tinfo*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
